<resources>
    <string name="app_name">SmartPan_Task</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="image">Image</string>
    <string name="logout">Logout</string>
    
    <string name="google_maps_key">AIzaSyBxiPD1Ctiy2UYm5RqOaFEhfzhAXCd5eBU</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="show_contacts">Show Contacts</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="search_country">Search Country</string>

</resources>
