<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/activity_toolbar"
            android:id="@+id/register_toolbar"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="#66000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/outlinerectangle"
                android:inputType="text"
                android:id="@+id/register_name_editText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_name_editText"
                android:hint="@string/username"
                android:textColorHint="#66000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/outlinerectangle"
                android:id="@+id/register_username_editText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outlinerectangle"
                android:layout_below="@+id/register_username_editText"
                android:hint="@string/password"
                android:textColorHint="#66000000"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/register_password_editText"
                android:inputType="textPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_password_editText"
                android:hint="@string/email"
                android:textColorHint="#66000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/outlinerectangle"
                android:id="@+id/register_email_editText"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_email_editText"
                android:hint="@string/mobile"
                android:textColorHint="#66000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/outlinerectangle"
                android:id="@+id/register_mobile_editText"
                android:inputType="phone"
                android:layout_marginBottom="20dp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/register_progressBar"/>

            </RelativeLayout>
        </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:id="@+id/textView" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_radioGroup"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp">

            <RadioButton
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/male_radioButton" />

            <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/female_radioButton" />

        </RadioGroup>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:id="@+id/register_submit"/>


    </RelativeLayout>


</LinearLayout>