<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cdc.smartpan_task.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/activity_toolbar"
            android:id="@+id/login_toolbar"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/login_progressBar"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="#66000000"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/outlinerectangle"
            android:id="@+id/username_editText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/outlinerectangle"
            android:layout_below="@+id/username_editText"
            android:hint="@string/password"
            android:textColorHint="#66000000"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/password_editText"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@+id/password_editText"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@color/colorPrimary"
            android:id="@+id/login_Button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_Button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/don_t_have_an_account"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_Button"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/create_new_account"
            android:id="@+id/register_Button"/>

    </RelativeLayout>

</LinearLayout>
